--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<script src="js/index.js"></script>
+<script src="js/about.js"></script>
 
 <!-- Navbar -->
 <nav class="navbar fixed-top">
