--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<script src="js/index.js"></script>
+<script src="js/menu.js"></script>
 
 <!-- Navbar -->
 <nav class="navbar fixed-top">
