cleanup and make navbar non collapsible, make navbar links white

--- a/menu.html
+++ b/menu.html
@@ -13,29 +13,26 @@
             crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css"/>
-
     <title>Document</title>
 </head>
 
 <body>
-<script src="js/menu.js"></script>
-
 <!-- Navbar -->
 <nav class="navbar fixed-top">
     <div class="container">
         <!-- First Row: Brand Name -->
         <div class="row w-100 mx-auto">
             <div class="text-center">
-                <img class="logo" src="images/moonsushi-logo.webp" alt="">
+                <img class="logo" src="images/moonsushi-logo.webp" alt="moonsushi-logo">
             </div>
         </div>
         <!-- Second Row: Navigation Links -->
-        <div class="row navbar-expand-lg mx-auto">
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="row navbar-expand mx-auto">
+            <div class="" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="index.html">Home</a>
-                    <a class="nav-link active" href="menu.html">Menu</a>
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link link-light" href="index.html">Home</a>
+                    <a class="nav-link link-light active" href="menu.html">Menu</a>
+                    <a class="nav-link link-light" href="about.html">About</a>
                 </div>
             </div>
         </div>
@@ -47,58 +44,13 @@
 <div class="content">
     <div class="subcontent mx-auto">
         <div id="menu-container">
-            <div class="row">
-                <div class="col">
-                    <div class="card alt">
-                        <h3>
-                            Tofu Maki
-                        </h3>
-                        <img src="images/makitofu.webp" alt="">
-                        <p>
-                            Savory grilled marinated tofu, refreshing cucumber, and rich avocado, wrapped in fluffy sushi rice and nori, topped with a trendy sriracha mayo.
-                        </p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card alt">
-                        <h3>
-                            Asparagus Nigiri
-                        </h3>
-                        <img src="images/aspargusnigiri.webp" alt="">
-                        <p>
-                            Tender, lightly grilled asparagus atop a bed of warm, seasoned sushi rice, elegantly topped with a dollop of caviar for a luxurious burst of flavor.                    </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="card alt">
-                        <h3>
-                            Squid Nigiri
-                        </h3>
-                        <img src="images/squidnigiri.webp" alt="">
-                        <p>
-                            Delicate slices of fresh squid atop warm, seasoned sushi rice, drizzled with creamy mayo and garnished with fresh chives for a delightful burst of flavor.                    </p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card alt">
-                        <h3>
-                            Fried Tuna Maki
-                        </h3>
-                        <img src="images/friedmaki.webp" alt="">
-                        <p>
-                            Crispy fried tuna and creamy avocado, paired with zesty sriracha mayo, wrapped in seasoned sushi rice and nori, topped with a luxurious dollop of caviar for an exquisite finish.
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <!-- dynamic content here -->
         </div>
     </div>
 </div>
-
 <!-- Content -->
 
+<!-- Scripts -->
 <script
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -109,5 +61,8 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"
 ></script>
+
+<script src="js/menu.js"></script>
+<!-- Scripts -->
 </body>
 </html>
