--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,9 @@
             crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css"/>
+
+    <link rel="icon" href="icons/moonsushi-favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="icons/moonsushi-favicon.svg" type="image/x-icon">
     <title>Document</title>
 </head>
 
