--- a/menu.html
+++ b/menu.html
@@ -21,21 +21,37 @@
 
 <body>
 <!-- Navbar -->
-<nav class="navbar fixed-top">
-    <div class="container">
-        <!-- First Row: Brand Name -->
-        <div class="row w-100 mx-auto">
+<nav class="navbar fixed-top justify-content-center">
+    <div class="container w-100">
+        <div class="row mx-auto">
             <div class="text-center">
-                <img class="logo" src="images/moonsushi-logo.webp" alt="moonsushi-logo">
+                <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo">
             </div>
         </div>
-        <!-- Second Row: Navigation Links -->
-        <div class="row navbar-expand mx-auto">
-            <div class="" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+        <div class="row w-100 mx-auto">
+            <div class="col-4"></div>
+            <div class="col-4 navbar-expand" id="navbarNavAltMarkup">
+                <div class="navbar-nav justify-content-center">
                     <a class="nav-link link-light" href="index.html">Home</a>
-                    <a class="nav-link link-light active" href="menu.html">Menu</a>
+                    <a class="nav-link link-light fw-bold" href="menu.html">Menu</a>
                     <a class="nav-link link-light" href="about.html">About</a>
+                </div>
+            </div>
+
+            <div class="col-4 text-end align-content-center dropdown ms-auto">
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span id="cart-counter">0</span> 🛒
+                </button>
+                <div class="dropdown-menu border-light-subtle bg-dark dropdown-card dropdown-menu-end w-100">
+                    <div id="cart-container">
+                        <p>Cart empty!</p>
+                        <!-- dynamic cart content here-->
+                    </div>
+                    <div class="text-white">
+                        <h3>Total: <span id="totalPrice">0</span>:-</h3>
+                        <button class="btn btn-secondary">Checkout</button>
+                        <button class="btn btn-outline-info" onclick="clearCart()">Clear Cart</button>
+                    </div>
                 </div>
             </div>
         </div>
