switched google maps with 3d party cookie to openstreetmaps instead

--- a/about.html
+++ b/about.html
@@ -78,8 +78,8 @@
                     Find Us
                 </h3>
                 <div class="map">
-                    <iframe style="height:100%;width:100%;"
-                            src="https://www.google.com/maps/embed/v1/place?q=longyearbyen+509&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+                    <iframe title="OpenStreetMaps iframe" style="height:100%;width:100%;"
+                            src="https://www.uwp.is.ed.ac.uk/3rd-party-widgets/maps/v4/embeds/gm.php?map=YRyv3j1ebf"></iframe>
                 </div>
             </div>
         </div>
