--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="Learn about Moon Sushi's journey in Longyearbyen, Svalbard. Inspired by master chef Hiroshi Takeda, our story celebrates the fusion of Japanese tradition and Arctic flavors. Discover our heritage today!">
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -45,10 +46,10 @@
 <!-- Navbar -->
 
 <!-- Content -->
-<div class="content">
+<div class="content h-100 text-center">
     <div class="subcontent mx-auto">
         <div class="row">
-            <div class="card">
+            <div class="card text-box">
                 <h3>
                     About Us
                 </h3>
