--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="Welcome to Moon Sushi in Longyearbyen, Svalbard. Experience the fusion of traditional Japanese sushi with fresh Arctic flavors. Discover our unique story and explore our menu today!">
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -20,6 +21,8 @@
 </head>
 
 <body>
+
+<script src="js/weather.js"></script>
 
 <!-- Navbar -->
 <nav class="navbar fixed-top justify-content-center">
@@ -47,34 +50,35 @@
 <!-- Navbar -->
 
 <!-- Content -->
-<div class="content">
-    <div class="subcontent mx-auto">
-        <div class="card">
-            <h3>
-                Welcome
-            </h3>
-            <p>
-                Welcome to Moon Sushi, where the flavors of Japan come alive in the heart of Longyearbyen! We invite you
-                to embark on a culinary adventure that celebrates the art of sushi-making. As you enter our restaurant,
-                you’ll be greeted by a cozy ambiance and the enticing aroma of our expertly crafted dishes.
-            </p>
-            <br>
-            <p>
-                Our menu is designed to cater to all palates, featuring a wide range of sushi options, from traditional
-                favorites to innovative specialties. Whether you’re here for a casual lunch, a romantic dinner, or a
-                special celebration, our friendly staff is committed to providing you with an unforgettable dining
-                experience.
-            </p>
-            <br>
-            <p>
-                Join us at Moon Sushi and discover why we are a beloved culinary gem in Svalbard. We can’t wait to serve
-                you! </p>
+<div class="content h-100 text-center">
+    <div class="subcontent w-100 mx-auto">
+        <div class="row">
+            <div class="card text-box">
+                <h3>
+                    Welcome
+                </h3>
+                <p>
+                    Welcome to Moon Sushi, where the flavors of Japan come alive in the heart of Longyearbyen! We invite you
+                    to embark on a culinary adventure that celebrates the art of sushi-making. As you enter our restaurant,
+                    you’ll be greeted by a cozy ambiance and the enticing aroma of our expertly crafted dishes.
+                </p>
+                <br>
+                <p>
+                    Our menu is designed to cater to all palates, featuring a wide range of sushi options, from traditional
+                    favorites to innovative specialties. Whether you’re here for a casual lunch, a romantic dinner, or a
+                    special celebration, our friendly staff is committed to providing you with an unforgettable dining
+                    experience.
+                </p>
+                <br>
+                <p>
+                    Join us at Moon Sushi and discover why we are a beloved culinary gem in Svalbard. We can’t wait to serve
+                    you! </p>
+            </div>
         </div>
     </div>
 </div>
 
 <!-- Content -->
-
 <script
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
