--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="Explore the diverse menu at Moon Sushi in Longyearbyen, Svalbard. From classic rolls to innovative creations, our dishes blend Japanese artistry with local ingredients. Find your favorite sushi today!">
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -60,9 +61,9 @@
 <!-- Navbar -->
 
 <!-- Content -->
-<div class="content">
-    <div class="subcontent mx-auto">
-        <div id="menu-container">
+<div class="content h-100 text-center">
+    <div class="subcontent w-100 mx-auto">
+        <div id="menu-container" class="justify-content-center">
             <!-- dynamic content here -->
         </div>
     </div>
