switched back to google maps

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                 </h3>
                 <div class="map">
                     <iframe title="OpenStreetMaps iframe" style="height:100%;width:100%;"
-                            src="https://www.uwp.is.ed.ac.uk/3rd-party-widgets/maps/v4/embeds/gm.php?map=YRyv3j1ebf"></iframe>
+                            src="https://www.google.com/maps/embed/v1/place?q=Longyearbyen+Apartment,+Vei+509+1,+Longyearbyen,+Svalbard+and+Jan+Mayen&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
                 </div>
             </div>
         </div>
