images now uses lazy loading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container w-100">
         <div class="row mx-auto">
             <div class="text-center">
-                <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo">
+                <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo" loading="lazy">
             </div>
         </div>
         <div class="row w-100 mx-auto">
