aligned navbar with rest of site content max width

--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
 <body>
 <!-- Navbar -->
 <nav class="navbar fixed-top justify-content-center">
-    <div class="container w-100">
+    <div class="container w-100 navbar-container">
         <div class="row mx-auto">
             <div class="text-center">
                 <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo" loading="lazy">
