--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
 <!-- Navbar -->
 <nav class="navbar fixed-top justify-content-center">
-    <div class="container w-100">
+    <div class="container w-100 navbar-container">
         <div class="row mx-auto">
             <div class="text-center">
                 <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo" loading="lazy">
