--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!-- Navbar -->
 <nav class="navbar fixed-top justify-content-center">
-    <div class="container w-100">
+    <div class="container w-100 navbar-container">
         <div class="row mx-auto">
             <div class="text-center">
                 <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo" loading="lazy">
@@ -73,6 +73,11 @@
                 <p>
                     Join us at Moon Sushi and discover why we are a beloved culinary gem in Svalbard. We can’t wait to serve
                     you! </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card text-box">
+                <img src="images/longyearbyen.webp" alt="longyearbyen night" class="longyearbyen-image">
             </div>
         </div>
     </div>
