added contact info and opening hours

--- a/about.html
+++ b/about.html
@@ -74,6 +74,37 @@
             </div>
         </div>
         <div class="row">
+            <div class="col card text-box me-2">
+                <h3>
+                    Opening Hours
+                </h3>
+                <p>
+                    Monday: Closed <br>
+                    Tuesday: 17:00-23:00<br>
+                    Wednesday: 17:00-23:00<br>
+                    Thursday: 17:00-23:00<br>
+                    Friday: 17:00-23:00<br>
+                    Saturday: 17:00-23:00<br>
+                    Sunday: 17:00-23:00<br>
+                </p>
+            </div>
+            <div class="col card text-box ms-2">
+                <h3>
+                    Contact
+                </h3>
+                <p>
+                    hello@moonsushi.xyz <br>
+                    +4745 - 35 46 57
+                </p>
+                <h3>
+                    Address:
+                </h3>
+                <p>
+                    Vei 509 1, Longyearbyen 9170, Svalbard and Jan Mayen
+                </p>
+            </div>
+        </div>
+        <div class="row">
             <div class="card">
                 <h3>
                     Find Us
