--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
     <div class="container w-100 navbar-container">
         <div class="row mx-auto">
             <div class="text-center">
-                <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo" loading="lazy">
+                <img class="logo md-" src="icons/moonsushi-logo.svg" alt="moonsushi-logo">
             </div>
         </div>
         <div class="row w-100 mx-auto">
